	Fixed bug where advanced image styles were not respected.
	Removed address from the default list of block formats since it tends to be missused.
	Fixed so the pre block format is called preformatted to make it more verbose.
	Fixed so it's possible to context scope translation strings this isn't needed most of the time.
	Fixed so drag/dropped contents gets properly processed by paste plugin since it's basically a paste. Patch contributed by Greg Fairbanks.
	Fixed bug where the less common Shift+Delete didn't produce a proper cut operation on WebKit browsers.
Version 4.1.7 (2014-11-27)
	Added HTML5 schema support for srcset, source and picture. Patch contributed by mattheu.
	Added new cache_suffix setting to enable cache busting by producing unique urls.
	Added new paste_convert_word_fake_lists option to enable users to disable the fake lists convert logic.
	Fixed so advlist style changes adds undo levels for each change.
	Fixed bug where WebKit would sometimes produce an exception when the autolink plugin where looking for URLs.
	Fixed bug where IE 7 wouldn't be rendered properly due to to aggressive css compression.
	Fixed bug where DomQuery wouldn't accept window as constructor element.
	Fixed bug where the color picker in 3.x dialogs wouldn't work properly. Patch contributed by Callidior.
	Fixed bug where the image plugin wouldn't respect the document_base_url.
	Fixed bug where the jQuery plugin would fail to append to elements named array prototype names.
Version 4.1.6 (2014-10-08)
	Fixed bug with clicking on the scrollbar of the iframe would cause a JS error to be thrown.
	Fixed bug where null would produce an exception if you passed it to selection.setRng.
	Fixed bug where Ctrl/Cmd+Tab would indent the current list item if you switched tabs in the browser.
	Fixed bug where pasting empty cells from Excel would result in a broken table.
	Fixed bug where it wasn't possible to switch back to default list style type.